style cart.php & gift certificate page, fix container & body top spacing, improve cart styles

--- a/assets/scss/components/foundation/forms/_forms.scss
+++ b/assets/scss/components/foundation/forms/_forms.scss
@@ -19,8 +19,6 @@
 }
 
 #sort {
-    width: 100%;
-
     @include breakpoint("small") {
         width: initial;
     }
