--- a/assets/scss/layouts/account/_account.scss
+++ b/assets/scss/layouts/account/_account.scss
@@ -11,6 +11,7 @@
 }
 
 .account--fixed {
+    padding: 0 2em;
     @include breakpoint("medium") {
         margin: 0 auto;
         width: grid-calc(8, $total-columns);
