--- a/assets/scss/layouts/products/_productView.scss
+++ b/assets/scss/layouts/products/_productView.scss
@@ -11,8 +11,12 @@
     flex-flow: row wrap;
     align-items: stretch;
     margin: 0;
-    padding-top: 1em;
+    margin-top: -1.75em;
     margin-bottom: 4em;
+
+    @include breakpoint("medium") {
+        margin-top: 0;
+    }
 
     .modal & {
         padding-bottom: 0;
